--- a/frontend/src/app/components/auth/login/login.component.html
+++ b/frontend/src/app/components/auth/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+<div class="card-container">
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Login</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <form class="form-custom" [formGroup]="formLogin" (ngSubmit)="login()">
+                <mat-form-field class="input-custom">
+                    <mat-label>Email</mat-label>
+                    <input type="text" matInput placeholder="Email" formControlName="email">
+                </mat-form-field>
+                <mat-form-field class="input-custom">
+                    <mat-label>Password</mat-label>
+                <input type="password" matInput placeholder="Password" formControlName="password">
+                </mat-form-field>
+                <div *ngIf="errorSession">
+                    Ocurrio un error: <p style="color: red;">{{errorMsg}}</p> 
+                </div>
+                <div class="flex">
+                    <button mat-flat-button type="submit" color="primary" >Login</button>
+                </div>
+            </form>
+        </mat-card-content>
+    </mat-card>
+</div>
+
