--- a/frontend/src/app/components/pages/welcome/welcome.component.html
+++ b/frontend/src/app/components/pages/welcome/welcome.component.html
@@ -1,1 +1,16 @@
-<p>welcome works!</p>
+<mat-toolbar color="primary" class="mat-elevation-z3" >
+    <button mat-icon-button aria-label="Menu icon">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <h1> Welcome</h1>
+</mat-toolbar>
+<mat-sidenav-container autosize>
+    <mat-sidenav opened="" [style.width]="'250px'" mode="side">
+        Menu
+        <app-sidenav-header/>
+    </mat-sidenav>
+    <mat-sidenav-content class="content">
+      <h2>Content</h2>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
