--- a/frontend/src/app/components/pages/welcome/welcome.component.html
+++ b/frontend/src/app/components/pages/welcome/welcome.component.html
@@ -22,6 +22,9 @@
                 <mat-list role="list">
                     <mat-list-item role="listitem">ROL: {{dataUser.rolName}}</mat-list-item>
                     <mat-list-item role="listitem">Ultima Sesion: {{dataUser.rolName}}</mat-list-item>
+                    <mat-list-item role="listitem">Intentos Fallidos: {{dataUser.failAttents}}</mat-list-item>
+                    <mat-list-item role="listitem">Fecha Inicio Session: {{dataUser.fechaInicio}}</mat-list-item>
+                    <mat-list-item role="listitem">Fecha Cierre Session: {{dataUser.fechaCierre}}</mat-list-item>
                 </mat-list>
             </mat-card-content>
             <mat-card-footer class="example-card-footer">
