--- a/frontend/src/app/components/auth/profile/profile.component.html
+++ b/frontend/src/app/components/auth/profile/profile.component.html
@@ -33,6 +33,9 @@
             </mat-card-header>
             <mat-card-content>
               <form class="form-custom" [formGroup]="formProfile" (submit)="updatedata()" >
+                <div *ngIf="errorSession">
+                    Ocurrio un error: <p style="color: red;">{{errorMsg}}</p> 
+                </div>
                   <mat-form-field class="input-custom">
                     <mat-label>Nombres</mat-label>
                     <input type="text" matInput  formControlName="nombre">
@@ -90,7 +93,14 @@
               <th mat-header-cell *matHeaderCellDef>Identificacion</th>
               <td mat-cell *matCellDef="let element">{{element.CEDULA}}</td>
             </ng-container>
-          
+            <ng-container matColumnDef="usuario">
+              <th mat-header-cell *matHeaderCellDef>Usuario</th>
+              <td mat-cell *matCellDef="let element">{{element.USUARIO}}</td>
+            </ng-container>
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef>Correo</th>
+              <td mat-cell *matCellDef="let element">{{element.EMAIL}}</td>
+            </ng-container>
             <!-- Symbol Column -->
             <ng-container matColumnDef="movil">
               <th mat-header-cell *matHeaderCellDef>Movil</th>
